include laravel framework

--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,8 @@
         "illuminate/database": "^9|^10|^11|^12",
         "illuminate/bus": "^9|^10|^11|^12",
         "illuminate/queue": "^9|^10|^11|^12",
-        "illuminate/notifications": "^9|^10|^11|^12"
+        "illuminate/notifications": "^9|^10|^11|^12",
+        "laravel/framework": "^11|^12"
     },
     "require-dev": {
         "roave/security-advisories": "dev-latest",
